# qiprog

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
doc/: qiprog_protocol.md  qiprog_protocol.txt
extra/: 60-qiprog.rules
libqiprog/: CMakeLists.txt  HACKING.md
libqiprog/include/: qiprog.h  qiprog_usb.h  qiprog_usb_dev.h  qiprog_usb_host.h
libqiprog/src/: core.c  libqiprog.c  qiprog_internal.h  qiprog_usb_device.c  usb_master.c  util.c
src/: qiprog.c  tests.c  tests.h
